// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Auto Close 1`] = `
<button
  data-variant="secondary"
  type="button"
>
  Vis med automatisk lukking
</button>
<button
  data-variant="secondary"
  type="button"
>
  Vis uten automatisk lukking
</button>
`;

exports[`Dismissable 1`] = `
<button
  data-variant="secondary"
  type="button"
>
  Vis med lukkekryss
</button>
<button
  data-variant="secondary"
  type="button"
>
  Vis uten lukkekryss
</button>
`;

exports[`Preview 1`] = `
<dialog
  open
  aria-busy="false"
  data-color="info"
  data-icon="true"
  data-dismissable="true"
  data-timeout="false"
  style="position: relative; inset: initial;"
>
  <p data-variant="default">
    En ny rad ble lagt til
  </p>
  <button
    data-variant="tertiary"
    type="button"
    aria-label="Lukk"
  >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94z"
      >
      </path>
    </svg>
  </button>
</dialog>
`;

exports[`Promises 1`] = `
<button
  data-variant="secondary"
  type="button"
>
  Lagre eksamen
</button>
`;

exports[`Updates 1`] = `
<button
  data-variant="secondary"
  type="button"
>
  Last data
</button>
`;

exports[`Variants 1`] = `
<button
  data-variant="secondary"
  type="button"
>
  Vis info
</button>
<button
  data-variant="secondary"
  type="button"
>
  Vis success
</button>
<button
  data-variant="secondary"
  type="button"
>
  Vis warning
</button>
<button
  data-variant="secondary"
  type="button"
>
  Vis danger
</button>
`;
